--- a/src/libFLACnet/libFLACnet.vcxproj
+++ b/src/libFLACnet/libFLACnet.vcxproj
@@ -79,14 +79,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DecoderStream.h" />
+    <ClInclude Include="DecoderStreamException.h" />
     <ClInclude Include="EncoderStream.h" />
+    <ClInclude Include="EncoderStreamException.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="DecoderStream.cpp" />
+    <ClCompile Include="DecoderStreamException.cpp" />
     <ClCompile Include="EncoderStream.cpp" />
+    <ClCompile Include="EncoderStreamException.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
