--- a/src/libFLACnet/libFLACnet.vcxproj.filters
+++ b/src/libFLACnet/libFLACnet.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="EncoderStreamException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EncoderStreamState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="EncoderStreamException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EncoderStreamState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
