--- a/src/libFLACnet/libFLACnet.vcxproj
+++ b/src/libFLACnet/libFLACnet.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <ClInclude Include="DecoderStream.h" />
     <ClInclude Include="DecoderStreamException.h" />
+    <ClInclude Include="DecoderStreamState.h" />
     <ClInclude Include="EncoderStream.h" />
     <ClInclude Include="EncoderStreamException.h" />
     <ClInclude Include="EncoderStreamState.h" />
@@ -149,6 +150,7 @@
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="DecoderStream.cpp" />
     <ClCompile Include="DecoderStreamException.cpp" />
+    <ClCompile Include="DecoderStreamState.cpp" />
     <ClCompile Include="EncoderStream.cpp" />
     <ClCompile Include="EncoderStreamException.cpp" />
     <ClCompile Include="EncoderStreamState.cpp" />
