--- a/src/libFLACnet/libFLACnet.vcxproj.filters
+++ b/src/libFLACnet/libFLACnet.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="EncoderStreamState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DecoderStreamState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="EncoderStreamState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DecoderStreamState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
