Rename to Encoder

--- a/src/libFLACnet.Tests/libFLACnet.Tests.csproj
+++ b/src/libFLACnet.Tests/libFLACnet.Tests.csproj
@@ -69,7 +69,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="EncoderStreamTests.cs" />
+    <Compile Include="EncoderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
