Add SetMetadataRespond function.

--- a/src/libFLACnet.Tests/libFLACnet.Tests.csproj
+++ b/src/libFLACnet.Tests/libFLACnet.Tests.csproj
@@ -69,6 +69,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DecoderTests.cs" />
     <Compile Include="EncoderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
