--- a/src/libFLACnet/libFLACnet.vcxproj.filters
+++ b/src/libFLACnet/libFLACnet.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="MetadataType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MetadataId.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
