Rename Encoder and Decoder to StreamEncoder and StreamDecoder.

--- a/src/libFLACnet.Tests/libFLACnet.Tests.csproj
+++ b/src/libFLACnet.Tests/libFLACnet.Tests.csproj
@@ -69,8 +69,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="DecoderTests.cs" />
-    <Compile Include="EncoderTests.cs" />
+    <Compile Include="StreamDecoderTests.cs" />
+    <Compile Include="StreamEncoderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
