--- a/src/test_libFLACnet/test_libFLACnet.csproj
+++ b/src/test_libFLACnet/test_libFLACnet.csproj
@@ -86,6 +86,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="EncoderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
